--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
   <body>
     <h1>Mijn favoriete games ever....</h1>
 
+    <ul class="list-group">
+        <li class="list-group-item">Rust</li>
+        <li class="list-group-item">CS:GO</li>
+        <li class="list-group-item">League of Legends</li>
+        <li class="list-group-item">Minecraft</li>
+        <li class="list-group-item">Hearthstone</li>
+        <li class="list-group-item">Overwatch</li>
+        <li class="list-group-item">Business Tour</li>
+        <li class="list-group-item">Apex Legends</li>
+        <li class="list-group-item">Rainbow Six Siege</li>
+        <li class="list-group-item">Osu</li>
+      </ul>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
